--- a/hm-11/src/sass/components/main.scss
+++ b/hm-11/src/sass/components/main.scss
@@ -91,25 +91,25 @@
 }
 
 .items-1 {
-    background-image: url(../../images/sprites/ALARM.png);
+    background-image: url(../images/sprites/ALARM.png);
 }
 
 .items-2 {
-    background-image: url(../../images/sprites/LINEGRAPH.png);
+    background-image: url(../images/sprites/LINEGRAPH.png);
 }
 
 .items-3 {
-    background-image: url(../../images/sprites/COMPUTEROK.png);
+    background-image: url(../images/sprites/COMPUTEROK.png);
 }
 
 .items-4 {
-    background-image: url(../../images/sprites/BOOK2.png);
+    background-image: url(../images/sprites/BOOK2.png);
 }
 
 .items-5 {
-    background-image: url(../../images/sprites/HOME.png);
+    background-image: url(../images/sprites/HOME.png);
 }
 
 .items-6 {
-    background-image: url(../../images/sprites/IMAGE.png);
+    background-image: url(../images/sprites/IMAGE.png);
 }
